style: rename analysis notebook

--- a/run_analysis.ipynb
+++ b/run_analysis.ipynb
@@ -159,7 +159,206 @@
      "output_type": "stream",
      "text": [
       "Processing original vs shuffled_full correlations.\n",
-      "     Calculating correlation matrix.\n"
+      "     Calculating correlation matrix.\n",
+      "     Generating heatmaps for correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n",
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n",
+      "Plotting horizontal feature correlations histogram...\n",
+      "Plotting cross feature correlations histogram...\n",
+      "Processing original vs shuffled_roi correlations.\n",
+      "     Calculating correlation matrix.\n",
+      "     Generating heatmaps for correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:27:25-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:28:00-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n",
+      "Plotting cross feature correlations histogram...\n",
+      "Processing original vs shuffled_non_roi correlations.\n",
+      "     Calculating correlation matrix.\n",
+      "     Generating heatmaps for correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:31:00-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:31:35-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n",
+      "Plotting cross feature correlations histogram...\n",
+      "Processing original vs randomized_sampled_full correlations.\n",
+      "     Calculating correlation matrix.\n",
+      "     Generating heatmaps for correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:34:35-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:35:10-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n",
+      "Plotting cross feature correlations histogram...\n",
+      "Processing original vs randomized_sampled_roi correlations.\n",
+      "     Calculating correlation matrix.\n",
+      "     Generating heatmaps for correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:38:05-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:38:40-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n",
+      "Plotting cross feature correlations histogram...\n",
+      "Processing original vs randomized_sampled_non_roi correlations.\n",
+      "     Calculating correlation matrix.\n",
+      "     Generating heatmaps for correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:41:38-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-09T17:42:14-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n",
+      "Plotting cross feature correlations histogram...\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -253,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
