fix: convert fmcib input size to tuple from config

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,12 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "CROP_METHOD = config['crop_method'] # Options are bbox, cube, centroid\n",
-    "FMCIB_INPUT_SIZE = config['crop_size']"
+    "FMCIB_INPUT_SIZE = tuple(config['crop_size'])"
    ]
   },
   {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
