--- a/run_analysis.ipynb
+++ b/run_analysis.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     "NEG_CONTROL_REGIONS = config[\"negative_control_regions\"]\n",
     "NEG_CONTROL_TYPES = config[\"negative_control_types\"]\n",
     "\n",
-    "CROP_METHOD = \"bbox\" #config['crop_method']\n",
+    "CROP_METHOD = config['crop_method']\n",
     "\n",
     "# Get full list of image types to run FMCIB on\n",
     "negative_control_list = [f\"{negative_control[0]}_{negative_control[1]}\" for negative_control in itertools.product(NEG_CONTROL_TYPES, NEG_CONTROL_REGIONS)]"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:27:25-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:31:01-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:28:00-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:31:34-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -214,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:31:00-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:34:30-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -231,7 +231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:31:35-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:35:03-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -250,7 +250,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:34:35-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:37:59-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -267,7 +267,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:35:10-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:38:32-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -286,7 +286,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:38:05-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:41:26-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -303,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:38:40-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:41:59-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -322,7 +322,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:41:38-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:44:55-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -339,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-09T17:42:14-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+      "\u001b[2m2025-01-10T16:45:29-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_cube/histogram/original_pearson_self_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
      ]
     },
     {
@@ -348,17 +348,6 @@
      "text": [
       "Plotting horizontal feature correlations histogram...\n",
       "Plotting cross feature correlations histogram...\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -434,6 +423,13 @@
     "                                                                                            num_bins=450,\n",
     "                                                                                            overwrite=overwrite)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -452,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
