clean versions of notebooks

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -139,32 +139,14 @@
    "outputs": [],
    "source": [
     "# Path to the directory containing the patient ID level directories of the images\n",
-    "# path_to_downloaded_data = Path(\"INSERT_PATH_HERE\")\n",
-    "path_to_downloaded_data = Path(\"rawdata/RADCURE/UNZIPPED_IMAGES_DO_NOT_DELETE/\")"
+    "path_to_downloaded_data = Path(\"INSERT_PATH_HERE\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m2025-01-09T16:20:40-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mThe dataset has already been indexed. Use --update to force update.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mimgtools\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mops.__init__:218\u001b[0m\n",
-      "/home/bioinf/bhklab/radiomics/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/imgtools/modules/datagraph.py:430: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
-      "  relevant_study_id = self.df_new.loc[(self.df_new.edge_type.str.contains(regex_term)), \"study_x\"].unique()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset already processed...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pipeline = AutoPipeline(input_directory=path_to_downloaded_data,\n",
     "                        output_directory=nifti_dir,\n",
@@ -218,29 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing original images...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating and processing shuffled full negative control...\n",
-      "Creating and processing shuffled roi negative control...\n",
-      "Creating and processing shuffled non_roi negative control...\n",
-      "Creating and processing randomized_sampled full negative control...\n",
-      "Creating and processing randomized_sampled roi negative control...\n",
-      "Creating and processing randomized_sampled non_roi negative control...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Crop and resize the original images\n",
     "print(f\"Processing original images...\")\n",
@@ -272,13 +234,6 @@
     "                                             negative_control_region = region,\n",
     "                                             parallel = parallel)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -297,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
