refactor: update pixi environment kernel setup instructions to reflect new pixi tasks

--- a/run_fmcib.ipynb
+++ b/run_fmcib.ipynb
@@ -20,11 +20,11 @@
     "1. Run the following commands in the terminal:\n",
     "\n",
     "    ```bash\n",
-    "    $ pixi install\n",
+    "    $ pixi install -e fmcib\n",
     "\n",
     "    $ pixi shell -e fmcib\n",
     "\n",
-    "    $ ipython kernel install --user --name=fmcib --display-name=fmcib\n",
+    "    $ pixi run fmcib_kernel\n",
     "    ```\n",
     "\n",
     "2. In the `Select Kernel` menu at the top right of the notebook, select `Jupyter Kernel` as the source. \n",
