feat: add check for weight file path existence

--- a/run_fmcib.ipynb
+++ b/run_fmcib.ipynb
@@ -105,6 +105,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "weight_file_path = Path(\"model_weights.torch\")\n",
+    "if weight_file_path.exists():\n",
+    "    fmcib_weights_path = weight_file_path\n",
+    "else:\n",
+    "    fmcib_weights_path = None\n",
+    "\n",
+    "\n",
     "for crop_type_dir_path in fmcib_csv_dir.glob(\"*/\"):\n",
     "    crop_type = crop_type_dir_path.name\n",
     "    # Set up results directory\n",
@@ -118,9 +125,16 @@
     "        if not feature_file_save_path.exists():\n",
     "            runFMCIBInfer(feature_file_save_path=str(feature_file_save_path), \n",
     "                        csv_path=str(fmcib_csv_path), \n",
-    "                        weights_path=\"model_weights.torch\",\n",
+    "                        weights_path=fmcib_weights_path,\n",
     "                        precropped=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
