feat: add section to run a single feature type correlation

--- a/run_analysis.ipynb
+++ b/run_analysis.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "source": [
     "## Set up pixi environment kernel\n",
+    "If you ran `run_readii_prep`, the kernel should already exist and you can skip to step 2.\n",
     "\n",
     "1. Run the following commands in the terminal:\n",
     "\n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,8 +185,8 @@
     "    \n",
     "    # Get extracted features for this image type, extract set the patient ID as the dataframe index, remove image_path column\n",
     "    horizontal_features_df = prepPatientIndex(extracted_feature_sets[horizontal_feature_type], \n",
-    "                                                file_path_column = file_path_column, \n",
-    "                                                pat_id_pattern = PAT_ID_PATTERN)\n",
+    "                                              file_path_column = file_path_column, \n",
+    "                                              pat_id_pattern = PAT_ID_PATTERN)\n",
     "\n",
     "    \n",
     "    # Load existing correlation matrix if it's available\n",
@@ -228,6 +229,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Original Correlations Only\n",
+    "Run this section if no negative controls are being run and you want to analyze just the original image features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from readii.analyze.plot_correlation import plotSelfCorrHeatmap, plotSelfCorrHistogram\n",
+    "\n",
+    "# Name of the column used to extract the patient ID for a row of features\n",
+    "file_path_column = 'image_path'\n",
+    "\n",
+    "# Correlation method to apply\n",
+    "correlation_method = \"pearson\"\n",
+    "\n",
+    "# Colormap to use for plots\n",
+    "heatmap_cmap = \"nipy_spectral\"\n",
+    "\n",
+    "# Whether to overwrite existing files\n",
+    "overwrite = True\n",
+    "\n",
+    "# Get and set up the feature dataframe for the original features once\n",
+    "vertical_feature_type = \"original\"\n",
+    "vertical_features_df = prepPatientIndex(extracted_feature_sets[vertical_feature_type],\n",
+    "                                        file_path_column,\n",
+    "                                        PAT_ID_PATTERN)\n",
+    "\n",
+    "# Generate the output path for matrix file existence check\n",
+    "corr_matrix_output_path = corr_matrix_writer.resolve_path(VerticalFeatureType=vertical_feature_type,\n",
+    "                                                          HorizontalFeatureType=vertical_feature_type,\n",
+    "                                                          CorrelationType=correlation_method)\n",
+    "\n",
+    "# Load existing correlation matrix if it's available\n",
+    "if corr_matrix_output_path.exists() and corr_matrix_output_path.is_file():\n",
+    "    print(\"Loading correlation matrix.\")\n",
+    "    vertical_self_corr_df = pd.read_csv(corr_matrix_output_path, index_col=0)\n",
+    "\n",
+    "# Calculate the correlation matrix if the file doesn't exist\n",
+    "else:\n",
+    "    print(\"Calculating correlation matrix.\")\n",
+    "    # Calculate correlations between vertical image features \n",
+    "    vertical_self_corr_df = vertical_features_df.corr(method = correlation_method)\n",
+    "    # Add feature type suffix to column names and index for the plotting functions to work\n",
+    "    vertical_self_corr_df = vertical_self_corr_df.add_suffix(f\"_{vertical_feature_type}\", 0)\n",
+    "    vertical_self_corr_df = vertical_self_corr_df.add_suffix(f\"_{vertical_feature_type}\", 1)\n",
+    "\n",
+    "    # save out the correlation dataframe\n",
+    "    corr_matrix_writer.save(vertical_self_corr_df, \n",
+    "                            VerticalFeatureType=vertical_feature_type,\n",
+    "                            HorizontalFeatureType=vertical_feature_type,\n",
+    "                            CorrelationType=correlation_method)\n",
+    "    \n",
+    "# Make plots\n",
+    "_, vert_heatmap_path = plotSelfCorrHeatmap(vertical_self_corr_df,\n",
+    "                                           vertical_feature_type,\n",
+    "                                           correlation_method,\n",
+    "                                           heatmap_cmap,\n",
+    "                                           correlations_dir,\n",
+    "                                           overwrite)\n",
+    "    \n",
+    "_, vert_histogram_path = plotSelfCorrHistogram(vertical_self_corr_df,\n",
+    "                                               vertical_feature_type,\n",
+    "                                               correlation_method,\n",
+    "                                               num_bins=450,\n",
+    "                                               y_upper_bound = 100000,\n",
+    "                                               save_dir_path=correlations_dir,\n",
+    "                                               overwrite=overwrite)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -251,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
