--- a/run_analysis.ipynb
+++ b/run_analysis.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,290 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing original vs shuffled_full correlations.\n",
+      "     Loading correlation matrix.\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:14:44-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:14:45-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/shuffled_full_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting cross feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:14:46-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_vs_shuffled_full_pearson_cross_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing original vs shuffled_roi correlations.\n",
+      "     Loading correlation matrix.\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:06-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:07-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/shuffled_roi_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting cross feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:08-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_vs_shuffled_roi_pearson_cross_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing original vs shuffled_non_roi correlations.\n",
+      "     Loading correlation matrix.\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:29-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:30-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/shuffled_non_roi_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting cross feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:30-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_vs_shuffled_non_roi_pearson_cross_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing original vs randomized_sampled_full correlations.\n",
+      "     Loading correlation matrix.\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:51-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:51-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/randomized_sampled_full_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting cross feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:15:52-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_vs_randomized_sampled_full_pearson_cross_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing original vs randomized_sampled_roi correlations.\n",
+      "     Loading correlation matrix.\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:16:12-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:16:13-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/randomized_sampled_roi_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting cross feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:16:14-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_vs_randomized_sampled_roi_pearson_cross_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing original vs randomized_sampled_non_roi correlations.\n",
+      "     Loading correlation matrix.\n",
+      "     Generating histograms for correlations.\n",
+      "Plotting vertical feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:16:34-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:16:35-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/randomized_sampled_non_roi_pearson_self_correlation_histogram.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting cross feature correlations histogram...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-15T13:16:35-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/histogram/original_vs_randomized_sampled_non_roi_pearson_cross_correlation_histogram.png already exists. Overwriting.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_writer.save:92\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Name of the column used to extract the patient ID for a row of features\n",
     "file_path_column = 'image_path'\n",
@@ -166,7 +449,7 @@
     "heatmap_cmap = \"nipy_spectral\"\n",
     "\n",
     "# Whether to overwrite existing files\n",
-    "overwrite = True\n",
+    "overwrite = False\n",
     "\n",
     "# Get and set up the feature dataframe for the original features once\n",
     "vertical_feature_type = \"original\"\n",
@@ -225,6 +508,8 @@
     "                                                                                            correlations_dir,\n",
     "                                                                                            correlation_method,\n",
     "                                                                                            num_bins=450,\n",
+    "                                                                                            self_corr_y_max = 250000,\n",
+    "                                                                                            cross_corr_y_max = 950000,\n",
     "                                                                                            overwrite=overwrite)\n"
    ]
   },
@@ -328,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
